@@ -1,5 +1,11 @@
 2010-04-29  Sergio Martin  <sergio.martin@artica.es>
 
+	* godmode/reporting/visual_console_builder.php: Fixed that
+	was allowed to create a visual map without name and without
+	background. Bug: 2993503
+
+2010-04-29  Sergio Martin  <sergio.martin@artica.es>
+
 	* include/functions_visual_map.php: Fixed the critical render
 	from an object that was not static graph when was heredated
 	from another layout. Bug 2940950
